<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/RegistrationView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/Email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/EMail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/registration_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1.5"
            android:background="@android:color/holo_blue_light"
            android:text="@string/register"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/terms_and_conditions" />

    </LinearLayout>

</RelativeLayout>