<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0.15"
            android:gravity="center_horizontal|center"
            android:text="@string/LoginTextView"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/userIDField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/EMail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/SecretField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewFailLogin"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.2"
            android:background="@android:color/holo_blue_light"
            android:text="@string/loginButtonText"
            android:textColor="@android:color/background_light" />

        <CheckBox
            android:id="@+id/loginCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/textLogin_permanent" />

        <TextView
            android:id="@+id/textViewLogin_RegisterFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.1"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/register_first"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>