<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/banking_overview_no_bank_access_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/banking_overview_no_bank_access_text"
        android:textColor="@color/colorBankingOverview"
        android:textSize="@dimen/fontSizeBankingOverviewNoBankAccess"
        android:textStyle="bold" />

    <Button
        android:id="@+id/banking_overview_no_bank_access_button_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/banking_overview_no_bank_accesses_button_margin_bottom"
        android:layout_marginLeft="@dimen/banking_overview_no_bank_accesses_button_margin_left_right"
        android:layout_marginRight="@dimen/banking_overview_no_bank_accesses_button_margin_left_right"
        android:layout_weight="2"
        android:background="@color/colorBankingOverview"
        android:text="@string/banking_overview_no_bank_access_button_text"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/fontSizeBankingOverviewNoBankAccess"
        android:textStyle="bold"

        />
</LinearLayout>